--- a/simple-crop-image-lib/res/values/styles.xml
+++ b/simple-crop-image-lib/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="CropButton">
         <item name="android:layout_margin">1dp</item>
@@ -8,8 +8,9 @@
         <item name="android:layout_height">50dp</item>
         <item name="android:layout_width">60dp</item>
         <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:background">@drawable/selector_crop_button</item>
+        <item name="android:background">@drawable/selector_crop_button_new</item>
     </style>
 
 </resources>
